--- a/CODSOFT_MOVIE_RATING_PREDICTION_WITH_PYTHON.ipynb
+++ b/CODSOFT_MOVIE_RATING_PREDICTION_WITH_PYTHON.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMX9umquB7ZHKkpA0VEychv",
+      "authorship_tag": "ABX9TyM2eJkT5YkuqbPWJ0vg+5Cj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -423,8 +423,7 @@
     {
       "cell_type": "code",
       "source": [
-        "movie_data.head()\n",
-        ""
+        "movie_data.head()\n"
       ],
       "metadata": {
         "id": "vfijWwFhi2kE"
@@ -488,8 +487,7 @@
         "plt.xlabel('Year',fontsize=14)\n",
         "plt.ylabel('Rating', fontsize=14)\n",
         "plt.tight_layout()\n",
-        "plt.show()\n",
-        ""
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "FLjkWMFFkQBu"
@@ -498,10 +496,166 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Distribution of Genre of movies**"
+      ],
+      "metadata": {
+        "id": "HCVVqOTa4M5C"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "genre_counts = movie_data['Genre'].value_counts().reset_index()\n",
+        "genre_counts.columns = ['Genre','Count']"
+      ],
+      "metadata": {
+        "id": "BpmhldUrmtGx"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Select the top N genres (e.g., top 5)\n",
+        "top_n_genres = genre_counts.head(5)\n",
+        "top_n_genres"
+      ],
+      "metadata": {
+        "id": "sJajIp7p4_Go"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(4, 4))\n",
+        "plt.pie(top_n_genres['Count'], labels=top_n_genres['Genre'], autopct='%1.1f%%', startangle=140, colors=sns.color_palette('pastel'))\n",
+        "plt.title('Movie Genre Distribution', fontsize=16)\n",
+        "plt.axis('equal')\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "wLe4vmZo5cvM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "BpmhldUrmtGx"
+        "id": "fNrdx-UJ6fxv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **The distribution of top directors by average rating means looking at how directors are ranked based on the average ratings of their films.**"
+      ],
+      "metadata": {
+        "id": "ZZM8wr1G6Ypa"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Group the data by director and calculate the average rating\n",
+        "director_avg_rating = movie_data.groupby('Director')['Rating'].mean().reset_index()\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "6_8RIZhI6bUZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "director_avg_rating = director_avg_rating.sort_values(by='Rating', ascending=False)"
+      ],
+      "metadata": {
+        "id": "BnI67enl6d5z"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "top_directors = director_avg_rating.head(10)\n",
+        "top_directors"
+      ],
+      "metadata": {
+        "id": "Jpd97k2K712f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(12, 6))\n",
+        "sns.barplot(data=top_directors, x='Rating', y='Director', palette='viridis')\n",
+        "\n",
+        "plt.title('Top Directors by Average Rating', fontsize=16)\n",
+        "plt.xlabel('Average Rating', fontsize=14)\n",
+        "plt.ylabel('Director', fontsize=14)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "ucl4ib1w8FW_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Line plot between the number of votes and movie rating**"
+      ],
+      "metadata": {
+        "id": "8PKUFDhO9cO7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(12,6))\n",
+        "sns.lineplot(data=movie_data,x ='Rating',y='Votes')\n",
+        "plt.title('Votes vs. Rating',fontsize=16)\n",
+        "plt.xlabel('Rating',fontsize=14)\n",
+        "plt.ylabel('Votes', fontsize=14)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "sFiuOH1r9iQE"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Distribution of top actors  number of movie**"
+      ],
+      "metadata": {
+        "id": "SxMInTNK-vWq"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "EmLZ7nLc_Np5"
       },
       "execution_count": null,
       "outputs": []
