--- a/CODSOFT_MOVIE_RATING_PREDICTION_WITH_PYTHON.ipynb
+++ b/CODSOFT_MOVIE_RATING_PREDICTION_WITH_PYTHON.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyM2eJkT5YkuqbPWJ0vg+5Cj",
+      "authorship_tag": "ABX9TyMnetJduSET5XJKR4qXHf1T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -653,9 +653,261 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "actor_counts = movie_data['Actor 1'].value_counts().reset_index()\n",
+        "actor_counts.columns = ['Actor', 'MovieCount']\n",
+        "\n",
+        "top_n_actors = actor_counts.head(10)\n",
+        "top_n_actors\n",
+        ""
+      ],
       "metadata": {
         "id": "EmLZ7nLc_Np5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(12, 6))\n",
+        "sns.barplot(data=top_n_actors, x='MovieCount', y='Actor', orient='h')\n",
+        "\n",
+        "# Set plot labels and title\n",
+        "plt.title('Top Actors by Number of Movies', fontsize=16)\n",
+        "plt.xlabel('Number of Movies', fontsize=14)\n",
+        "plt.ylabel('Actor', fontsize=14)\n",
+        "\n",
+        "# Show the plot\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "IHFCCkjH225a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "o-Uz61vL34MR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Distribution of number of movie released every year**"
+      ],
+      "metadata": {
+        "id": "ntpKbOyr3-6s"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "yearly_movie_counts = movie_data['Year'].value_counts().reset_index()\n",
+        "yearly_movie_counts.columns = ['Year', 'MovieCount']\n",
+        "\n",
+        "yearly_movie_counts = yearly_movie_counts.sort_values(by='Year')\n",
+        "yearly_movie_counts"
+      ],
+      "metadata": {
+        "id": "Zk3yzoOl4CuX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(12, 6))\n",
+        "sns.lineplot(data=yearly_movie_counts, x='Year', y='MovieCount')\n",
+        "\n",
+        "plt.title('Number of Movies Released Every Year', fontsize=16)\n",
+        "plt.xlabel('Year', fontsize=14)\n",
+        "plt.ylabel('Number of Movies Released', fontsize=14)\n",
+        "\n",
+        "plt.show()\n",
+        "\n",
+        ""
+      ],
+      "metadata": {
+        "id": "QKPM4ZJw6FBd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Distribution of Movies with rating greater than 8 and votes greater than 10000**"
+      ],
+      "metadata": {
+        "id": "-rLTeCM17Jqo"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filtered_df = movie_data[(movie_data['Rating']>8) & (movie_data['Votes']>1000)]\n",
+        "filtered_df.head(10)"
+      ],
+      "metadata": {
+        "id": "cptj_FpI7L0J"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(15, 6))\n",
+        "ax=sns.barplot(data=filtered_df,x='Name',y='Votes',hue='Rating',dodge=False,width=0.5,palette='muted')\n",
+        "\n",
+        "ax.set_xticklabels(ax.get_xticklabels(), rotation=90, ha='right')\n",
+        "ax.legend(loc='upper right')\n",
+        "ax.set_xlabel('Movie Name')\n",
+        "ax.set_ylabel('Votes')\n",
+        "ax.set_title('Movies with rating greater than 8 and votes greater than 10000')\n",
+        "\n",
+        "plt.show()\n",
+        ""
+      ],
+      "metadata": {
+        "id": "AjeSXeuc8Azj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Distribution of Durations of movies by years**"
+      ],
+      "metadata": {
+        "id": "eH_gBn138k59"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movie_data['Duration'] = movie_data['Duration'].astype(int)\n",
+        "movie_data['Year'] = movie_data['Year'].astype(int)\n",
+        "\n",
+        "\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "sns.lineplot(data=movie_data,x='Year',y='Duration',errorbar=None)\n",
+        "plt.xlabel('Year')\n",
+        "plt.ylabel('Duration in minutes')\n",
+        "plt.title('Duration of movies by year')\n",
+        "plt.xticks(np.arange(1917,2023,5))\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "haqFdlk98og5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Distribution of Number of movies each genre**"
+      ],
+      "metadata": {
+        "id": "GDg7_oGP_kkJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "movie_data['Genre'] = movie_data['Genre'].str.split(',')\n",
+        "#create a new dataframe with one row for each genre\n",
+        "genre_df = movie_data.explode('Genre')\n",
+        "genre_df"
+      ],
+      "metadata": {
+        "id": "0o6eR3P1_nSa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "plt.figure(figsize=(12, 6))\n",
+        "sns.countplot(data=genre_df, x='Genre', order=genre_df['Genre'].value_counts().index, palette='viridis')\n",
+        "\n",
+        "plt.title('Number of Movies for Each Genre', fontsize=16)\n",
+        "plt.xlabel('Number of Movies', fontsize=14)\n",
+        "plt.ylabel('Genre', fontsize=14)\n",
+        "plt.xticks(rotation=90)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "PggWMEd_AYCO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Distribution of Average rating of movies in each genre**"
+      ],
+      "metadata": {
+        "id": "nj3J1bd9Adgp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "average_rating_by_genre = genre_df.groupby('Genre')['Rating'].mean().reset_index()\n",
+        "average_rating_by_genre = average_rating_by_genre.sort_values(by='Rating', ascending=False)"
+      ],
+      "metadata": {
+        "id": "221HHYoPAhOz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plt.figure(figsize=(15,5))\n",
+        "sns.barplot(data=average_rating_by_genre,y=\"Rating\",x='Genre',palette='coolwarm')\n",
+        "plt.xlabel('Genre')\n",
+        "plt.ylabel('Average Rating')\n",
+        "plt.title('Average rating of movies in each genre')\n",
+        "plt.xticks(rotation=90)\n",
+        "\n",
+        "plt.show()"
+      ],
+      "metadata": {
+        "id": "BC1fmvs9Ac9x"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Featured Engineering**"
+      ],
+      "metadata": {
+        "id": "EcAOmLFiAost"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DBGgnYrVArcH"
       },
       "execution_count": null,
       "outputs": []
