--- a/CODSOFT_MOVIE_RATING_PREDICTION_WITH_PYTHON.ipynb
+++ b/CODSOFT_MOVIE_RATING_PREDICTION_WITH_PYTHON.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMnetJduSET5XJKR4qXHf1T",
+      "authorship_tag": "ABX9TyMgoU2I6adl05tqx7ZZvO5c",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -658,8 +658,7 @@
         "actor_counts.columns = ['Actor', 'MovieCount']\n",
         "\n",
         "top_n_actors = actor_counts.head(10)\n",
-        "top_n_actors\n",
-        ""
+        "top_n_actors\n"
       ],
       "metadata": {
         "id": "EmLZ7nLc_Np5"
@@ -731,8 +730,7 @@
         "plt.ylabel('Number of Movies Released', fontsize=14)\n",
         "\n",
         "plt.show()\n",
-        "\n",
-        ""
+        "\n"
       ],
       "metadata": {
         "id": "QKPM4ZJw6FBd"
@@ -773,8 +771,7 @@
         "ax.set_ylabel('Votes')\n",
         "ax.set_title('Movies with rating greater than 8 and votes greater than 10000')\n",
         "\n",
-        "plt.show()\n",
-        ""
+        "plt.show()\n"
       ],
       "metadata": {
         "id": "AjeSXeuc8Azj"
@@ -905,9 +902,178 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "from sklearn.preprocessing import LabelEncoder\n",
+        "labelencoder = LabelEncoder()\n",
+        "\n",
+        "trans_data = movie_data.drop(['Name'],axis=1)\n",
+        "# Transform Director columns\n",
+        "trans_data['Director'] = labelencoder.fit_transform(movie_data['Director'])\n",
+        "\n",
+        "\n",
+        "# Transform Actors Columns"
+      ],
       "metadata": {
         "id": "DBGgnYrVArcH"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "trans_data['Actor 1'] = labelencoder.fit_transform(movie_data['Actor 1'])\n",
+        "trans_data['Actor 2'] = labelencoder.fit_transform(movie_data['Actor 2'])\n",
+        "trans_data['Actor 3'] = labelencoder.fit_transform(movie_data['Actor 3'])\n",
+        "trans_data['Genre'] = labelencoder.fit_transform(movie_data['Genre'].apply(lambda x: ', '.join(x)))\n",
+        "\n",
+        "trans_data.head()\n"
+      ],
+      "metadata": {
+        "id": "w-yqTZIyR0h0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\n",
+        "scaler = MinMaxScaler()\n",
+        "sc_data = scaler.fit_transform(trans_data)\n",
+        "sc_df = pd.DataFrame(sc_data,columns=trans_data.columns)\n",
+        "\n",
+        "sc_df.head()"
+      ],
+      "metadata": {
+        "id": "Re1T6aOiUaPg"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Examine Correlation of Data**"
+      ],
+      "metadata": {
+        "id": "tPtsvp44Uyk5"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# correlation\n",
+        "corr_df = trans_data.corr(numeric_only=True)\n",
+        "corr_df['Rating'].sort_values(ascending=False)"
+      ],
+      "metadata": {
+        "id": "Fo0siSo7U6L0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sns.heatmap(corr_df,annot=False,cmap=\"coolwarm\")"
+      ],
+      "metadata": {
+        "id": "UUCPYGqZU9uS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Model Building**"
+      ],
+      "metadata": {
+        "id": "9K5bbxfAVT05"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import modeling Libraries\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from sklearn.metrics import mean_squared_error,mean_absolute_error,r2_score"
+      ],
+      "metadata": {
+        "id": "zNPF4DHJVWWN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# put data except Rating data\n",
+        "X = trans_data.drop(['Rating'],axis=1)\n",
+        "\n",
+        "# Put only Rating data\n",
+        "y = trans_data['Rating']\n",
+        "\n",
+        "X_train,X_test,y_train,y_test = train_test_split(X,y,test_size=0.3,random_state=42)\n",
+        "\n",
+        "model = LinearRegression()\n",
+        "model.fit(X_train,y_train)"
+      ],
+      "metadata": {
+        "id": "z0NX6e48Vm-a"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X_test = np.array(X_test)"
+      ],
+      "metadata": {
+        "id": "sbe8onFFVr62"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "y_pred"
+      ],
+      "metadata": {
+        "id": "ykubYQfBVuZA"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('R2 score: ',r2_score(y_test,y_pred))\n",
+        "print('Mean squared error: ',mean_squared_error(y_test,y_pred))\n",
+        "print('Mean absolute error: ',mean_absolute_error(y_test,y_pred))\n",
+        ""
+      ],
+      "metadata": {
+        "id": "iwX6-PosVyld"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(y_test)\n",
+        ""
+      ],
+      "metadata": {
+        "id": "ucmXhrq8V2bX"
       },
       "execution_count": null,
       "outputs": []
